dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/config.h.in)
AM_INIT_AUTOMAKE(lal, 0.8)
AM_CONFIG_HEADER(include/config.h include/lal/LALConfig.h)

lal_version_major=`echo "$VERSION" | cut -d. -f1`
lal_version_minor=`echo "$VERSION" | cut -d. -f2`
lal_configure_date=`date -u +"%Y/%m/%e %T %Z"`
AC_DEFINE_UNQUOTED(LAL_VERSION, "$VERSION", [LAL Version])
AC_DEFINE_UNQUOTED(LAL_VERSION_MAJOR, $lal_version_major, [LAL Version Major Number] )
AC_DEFINE_UNQUOTED(LAL_VERSION_MINOR, $lal_version_minor, [LAL Version Minor Number] )
AC_DEFINE_UNQUOTED(LAL_CONFIGURE_ARGS, "$ac_configure_args", [LAL Configure Arguments])
AC_DEFINE_UNQUOTED(LAL_CONFIGURE_DATE, "$lal_configure_date", [LAL Configure Date])

LAL_WITH_CC
LAL_WITH_MPICC
LAL_WITH_EXTRA_CPPFLAGS
LAL_WITH_EXTRA_CFLAGS
LAL_WITH_EXTRA_LDFLAGS
LAL_WITH_EXTRA_LIBS
LAL_WITH_GCC_FLAGS

LAL_ENABLE_FRAME
LAL_ENABLE_MPI
AM_CONDITIONAL(FRAME, test x$frame = xtrue)
AM_CONDITIONAL(MPI, test x$mpi = xtrue)
AM_CONDITIONAL(FRAMEANDMPI, test x$frame = xtrue -a x$mpi = xtrue)

LAL_ENABLE_DEBUG
LAL_ENABLE_MACROS
LAL_ENABLE_PTHREAD_LOCK

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_LIBTOOL
AC_CHECK_PROGS(LATEX, pdflatex latex, echo)
AC_CHECK_PROGS(MKIND, makeindex, echo)
AC_CHECK_PROGS(DVIPS, dvips, echo)

dnl Checks for libraries.
AC_CHECK_LIB(m, sin)
AC_SEARCH_LIBS(fftw_one, sfftw fftw, , LAL_FFTW_MSG_ERROR, -lm)
AC_SEARCH_LIBS(rfftw_one, srfftw rfftw, , LAL_FFTW_MSG_ERROR, -lm)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h unistd.h getopt.h malloc.h)
AC_CHECK_HEADERS(sfftw.h fftw.h, break)
AC_CHECK_HEADERS(srfftw.h rfftw.h, break)
LAL_SFFTW_WORKS
LAL_SRFFTW_WORKS

dnl Checks for optional libraries and header files.
if test "${frame}" = "true"; then
  LAL_CHECK_FRAMELIB
fi
if test "${mpi}" = "true"; then
  LAL_CHECK_MPI
fi
if test "${lal_pthread_lock}" = "true"; then
  AC_CHECK_HEADERS(pthread.h, break)
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_STRINGIZE
AC_TYPE_SIZE_T
AC_HEADER_TIME
LAL_CHECK_SIZEOF(short)
LAL_CHECK_SIZEOF(int)
LAL_CHECK_SIZEOF(long)
LAL_CHECK_SIZEOF(long long)
LAL_CHECK_SIZEOF(float)
LAL_CHECK_SIZEOF(double)

dnl Checks for library functions.
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(getopt_long)
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(putenv)

dnl Add gcc specific flags --- must be done at end or tests will break!
if test "$GCC" = yes; then
  CFLAGS="$CFLAGS $lal_gcc_flags"
fi

AC_OUTPUT([Makefile                               \
           doc/Makefile                           \
           doc/laldoc/Makefile                    \
           doc/laldoc/ldoc-pkg.sh                 \
           doc/autodoc/Makefile                   \
           include/Makefile                       \
           include/lal/Makefile                   \
           lib/Makefile                           \
           packages/Makefile                      \
           packages/std/Makefile                  \
           packages/std/doc/Makefile              \
           packages/std/include/Makefile          \
           packages/std/src/Makefile              \
           packages/std/test/Makefile             \
           packages/support/Makefile              \
           packages/support/doc/Makefile          \
           packages/support/include/Makefile      \
           packages/support/src/Makefile          \
           packages/support/test/Makefile         \
           packages/tools/Makefile                \
           packages/tools/doc/Makefile            \
           packages/tools/include/Makefile        \
           packages/tools/src/Makefile            \
           packages/tools/test/Makefile           \
           packages/sample/Makefile               \
           packages/sample/doc/Makefile           \
           packages/sample/include/Makefile       \
           packages/sample/src/Makefile           \
           packages/sample/test/Makefile          \
           packages/hello/Makefile                \
           packages/hello/doc/Makefile            \
           packages/hello/include/Makefile        \
           packages/hello/src/Makefile            \
           packages/hello/test/Makefile           \
           packages/factories/Makefile            \
           packages/factories/doc/Makefile        \
           packages/factories/include/Makefile    \
           packages/factories/src/Makefile        \
           packages/factories/test/Makefile       \
           packages/vectorops/Makefile            \
           packages/vectorops/doc/Makefile        \
           packages/vectorops/include/Makefile    \
           packages/vectorops/src/Makefile        \
           packages/vectorops/test/Makefile       \
           packages/inject/Makefile               \
           packages/inject/doc/Makefile           \
           packages/inject/include/Makefile       \
           packages/inject/src/Makefile           \
           packages/inject/test/Makefile          \
           packages/utilities/Makefile            \
           packages/utilities/doc/Makefile        \
           packages/utilities/include/Makefile    \
           packages/utilities/src/Makefile        \
           packages/utilities/test/Makefile       \
           packages/date/Makefile                 \
           packages/date/doc/Makefile             \
           packages/date/include/Makefile         \
           packages/date/src/Makefile             \
           packages/date/test/Makefile            \
           packages/tdfilter/Makefile             \
           packages/tdfilter/doc/Makefile         \
           packages/tdfilter/include/Makefile     \
           packages/tdfilter/src/Makefile         \
           packages/tdfilter/test/Makefile        \
           packages/window/Makefile               \
           packages/window/doc/Makefile           \
           packages/window/include/Makefile       \
           packages/window/src/Makefile           \
           packages/window/test/Makefile          \
           packages/fft/Makefile                  \
           packages/fft/doc/Makefile              \
           packages/fft/include/Makefile          \
           packages/fft/src/Makefile              \
           packages/fft/test/Makefile             \
           packages/timefreq/Makefile             \
           packages/timefreq/doc/Makefile         \
           packages/timefreq/include/Makefile     \
           packages/timefreq/src/Makefile         \
           packages/timefreq/test/Makefile        \
           packages/clremoval/Makefile            \
           packages/clremoval/doc/Makefile        \
           packages/clremoval/include/Makefile    \
           packages/clremoval/src/Makefile        \
           packages/clremoval/test/Makefile       \
           packages/stochastic/Makefile           \
           packages/stochastic/doc/Makefile       \
           packages/stochastic/include/Makefile   \
           packages/stochastic/src/Makefile       \
           packages/stochastic/test/Makefile      \
           packages/inspiral/Makefile             \
           packages/inspiral/doc/Makefile         \
           packages/inspiral/include/Makefile     \
           packages/inspiral/src/Makefile         \
           packages/inspiral/test/Makefile        \
           packages/noisemodels/Makefile          \
           packages/noisemodels/doc/Makefile      \
           packages/noisemodels/include/Makefile  \
           packages/noisemodels/src/Makefile      \
           packages/noisemodels/test/Makefile     \
           packages/bank/Makefile                 \
           packages/bank/doc/Makefile             \
           packages/bank/include/Makefile         \
           packages/bank/src/Makefile             \
           packages/bank/test/Makefile            \
           packages/pulsar/Makefile               \
           packages/pulsar/doc/Makefile           \
           packages/pulsar/include/Makefile       \
           packages/pulsar/src/Makefile           \
           packages/pulsar/test/Makefile          \
           packages/fct/Makefile                  \
           packages/fct/doc/Makefile              \
           packages/fct/include/Makefile          \
           packages/fct/src/Makefile              \
           packages/fct/test/Makefile             \
           packages/framedata/Makefile            \
           packages/framedata/doc/Makefile        \
           packages/framedata/include/Makefile    \
           packages/framedata/src/Makefile        \
           packages/framedata/test/Makefile       \
           packages/comm/Makefile                 \
           packages/comm/doc/Makefile             \
           packages/comm/include/Makefile         \
           packages/comm/src/Makefile             \
           packages/comm/test/Makefile            \
           packages/findchirp/Makefile            \
           packages/findchirp/doc/Makefile        \
           packages/findchirp/include/Makefile    \
           packages/findchirp/src/Makefile        \
           packages/findchirp/test/Makefile       \
           packages/burstsearch/Makefile          \
           packages/burstsearch/doc/Makefile      \
           packages/burstsearch/include/Makefile  \
           packages/burstsearch/src/Makefile      \
           packages/burstsearch/test/Makefile     \
           packages/tracksearch/Makefile          \
           packages/tracksearch/doc/Makefile      \
           packages/tracksearch/include/Makefile  \
           packages/tracksearch/src/Makefile      \
           packages/tracksearch/test/Makefile     \
         ],[chmod +x doc/laldoc/ldoc-pkg.sh])

